test/LitTests/SemanticAnalysis/Types/FunctionTypeVoidParameterType.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

// CHECK: .loci:5:29: error: parameter type in function pointer type cannot be void
using Type = (*)(void)(int, void);

// CHECK: 1 error generated.
